charts/forgejo/runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo-runner
  labels:
    app: forgejo-runner
    app.kubernetes.io/component: forgejo-runner
    app.kubernetes.io/instance: forgejo-runner
    app.kubernetes.io/managed-by: Kustomize
    app.kubernetes.io/name: forgejo-runner
  annotations:
    argocd.argoproj.io/sync-wave: '1'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: forgejo-runner
  template:
    metadata:
      name: forgejo-runner
      labels:
        app: forgejo-runner
        app.kubernetes.io/component: forgejo-runner
        app.kubernetes.io/instance: forgejo-runner
        app.kubernetes.io/managed-by: Kustomize
        app.kubernetes.io/name: forgejo-runner
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      containers:
        - name: runner
          image: code.forgejo.org/forgejo/runner:12.10.1
          command:
            - /bin/bash
            - -c
          args:
            - |
              while ! nc -z localhost 2376 </dev/null ; do
                echo 'waiting for docker daemon...' ;
                sleep 5 ;
                done ;
              forgejo-runner --config /data/config.yml daemon
          resources:
            limits:
              cpu: '1'
              ephemeral-storage: 3Gi
              memory: 4Gi
            requests:
              cpu: 100m
              ephemeral-storage: '0'
              memory: 64Mi
          volumeMounts:
            - name: docker-certs
              mountPath: /certs
            - name: runner-data
              mountPath: /data
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
        - name: daemon
          image: docker.io/docker:29.5.2-dind
          resources:
            limits:
              cpu: '1'
              ephemeral-storage: 3Gi
              memory: 4Gi
            requests:
              cpu: 100m
              ephemeral-storage: '0'
              memory: 64Mi
          securityContext:
            privileged: true
          volumeMounts:
            - name: docker-certs
              mountPath: /certs
      volumes:
        - name: docker-certs
          emptyDir: {}
        - name: runner-data
          emptyDir: {}
        - name: tmp
          emptyDir: {}
