charts/forgejo/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo-ssh
  namespace: forgejo
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: ssh
  rules:
    - backendRefs:
        - name: forgejo-ssh
          port: 22
